--- a/CinemaBook/Scence/Account/ManageBillFoodAccount/view/ManageBillFoodAccountViewController.xib
+++ b/CinemaBook/Scence/Account/ManageBillFoodAccount/view/ManageBillFoodAccountViewController.xib
@@ -11,7 +11,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ManageBillFoodAccountViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="btn_neworder" destination="PvQ-ve-65y" id="IHO-1I-tS0"/>
+                <outlet property="btn_successorder" destination="qty-vi-hOh" id="Rt7-3c-gkD"/>
                 <outlet property="tableview" destination="DZU-dl-0CI" id="bNp-b2-ing"/>
+                <outlet property="txt_search" destination="Vtt-fV-wab" id="Bbr-jl-a67"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -78,11 +81,17 @@
                                             <state key="normal" title="SẢN PHẨM ĐÃ ĐẶT">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </state>
+                                            <connections>
+                                                <action selector="btn_statusbillfood_neworder:" destination="-1" eventType="touchUpInside" id="y6W-Ky-uFZ"/>
+                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qty-vi-hOh">
                                             <rect key="frame" x="196.66666666666663" y="0.0" width="196.33333333333337" height="50"/>
                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                             <state key="normal" title="SẢN PHẨM ĐÃ NHẬN"/>
+                                            <connections>
+                                                <action selector="btn_statusbillfood_success:" destination="-1" eventType="touchUpInside" id="9TW-Dx-dn6"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                 </stackView>
@@ -97,22 +106,69 @@
                             </constraints>
                         </view>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="DZU-dl-0CI">
-                            <rect key="frame" x="0.0" y="101" width="393" height="658"/>
+                            <rect key="frame" x="0.0" y="162" width="393" height="597"/>
                             <color key="backgroundColor" systemColor="systemGray6Color"/>
                         </tableView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hnK-7q-jsg">
+                            <rect key="frame" x="0.0" y="102" width="393" height="60"/>
+                            <subviews>
+                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9eo-Nm-Df0">
+                                    <rect key="frame" x="20" y="10" width="353" height="40"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-search-2" translatesAutoresizingMaskIntoConstraints="NO" id="zIp-Y7-cNY">
+                                            <rect key="frame" x="10" y="9" width="22" height="22"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="22" id="DNT-gm-KnB"/>
+                                                <constraint firstAttribute="width" constant="22" id="Z1S-nH-eNU"/>
+                                            </constraints>
+                                        </imageView>
+                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tìm kiếm" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vtt-fV-wab">
+                                            <rect key="frame" x="32" y="0.0" width="321" height="40"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                    <constraints>
+                                        <constraint firstItem="zIp-Y7-cNY" firstAttribute="centerY" secondItem="9eo-Nm-Df0" secondAttribute="centerY" id="Cgf-84-lrK"/>
+                                        <constraint firstAttribute="bottom" secondItem="Vtt-fV-wab" secondAttribute="bottom" id="L0P-fR-hJT"/>
+                                        <constraint firstItem="Vtt-fV-wab" firstAttribute="top" secondItem="9eo-Nm-Df0" secondAttribute="top" id="LhV-gd-nvf"/>
+                                        <constraint firstItem="Vtt-fV-wab" firstAttribute="leading" secondItem="zIp-Y7-cNY" secondAttribute="trailing" id="Wt4-hp-U8G"/>
+                                        <constraint firstAttribute="trailing" secondItem="Vtt-fV-wab" secondAttribute="trailing" id="eWI-du-y0f"/>
+                                        <constraint firstItem="zIp-Y7-cNY" firstAttribute="leading" secondItem="9eo-Nm-Df0" secondAttribute="leading" constant="10" id="xYK-q4-24x"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="10"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="9eo-Nm-Df0" secondAttribute="trailing" constant="20" id="Arq-at-Zcs"/>
+                                <constraint firstAttribute="height" constant="60" id="gMc-aH-ikV"/>
+                                <constraint firstItem="9eo-Nm-Df0" firstAttribute="leading" secondItem="hnK-7q-jsg" secondAttribute="leading" constant="20" id="gfM-i7-nKX"/>
+                                <constraint firstItem="9eo-Nm-Df0" firstAttribute="top" secondItem="hnK-7q-jsg" secondAttribute="top" constant="10" id="iOl-Yx-jFv"/>
+                                <constraint firstAttribute="bottom" secondItem="9eo-Nm-Df0" secondAttribute="bottom" constant="10" id="u1j-Dg-MZk"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemGray6Color"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="adn-Go-ep8" secondAttribute="trailing" id="3W9-FL-cX3"/>
+                        <constraint firstAttribute="bottom" secondItem="DZU-dl-0CI" secondAttribute="bottom" id="6ek-Tb-m2O"/>
                         <constraint firstItem="tsY-i1-4ac" firstAttribute="top" secondItem="eFc-el-5Ru" secondAttribute="top" id="B6I-mG-j1g"/>
                         <constraint firstAttribute="trailing" secondItem="tsY-i1-4ac" secondAttribute="trailing" id="EV4-I7-9CB"/>
-                        <constraint firstAttribute="bottom" secondItem="DZU-dl-0CI" secondAttribute="bottom" id="MYe-9L-IUm"/>
+                        <constraint firstAttribute="trailing" secondItem="DZU-dl-0CI" secondAttribute="trailing" id="IA0-54-96E"/>
+                        <constraint firstItem="DZU-dl-0CI" firstAttribute="top" secondItem="hnK-7q-jsg" secondAttribute="bottom" id="ICJ-uE-caY"/>
+                        <constraint firstAttribute="trailing" secondItem="hnK-7q-jsg" secondAttribute="trailing" id="Mn8-rx-pM1"/>
+                        <constraint firstItem="hnK-7q-jsg" firstAttribute="top" secondItem="adn-Go-ep8" secondAttribute="bottom" constant="1" id="P7s-qZ-rjb"/>
                         <constraint firstItem="tsY-i1-4ac" firstAttribute="leading" secondItem="eFc-el-5Ru" secondAttribute="leading" id="VrF-ob-ooA"/>
-                        <constraint firstItem="DZU-dl-0CI" firstAttribute="top" secondItem="adn-Go-ep8" secondAttribute="bottom" id="WQA-ts-tOg"/>
                         <constraint firstItem="adn-Go-ep8" firstAttribute="leading" secondItem="eFc-el-5Ru" secondAttribute="leading" id="ZA3-IN-PQx"/>
-                        <constraint firstItem="DZU-dl-0CI" firstAttribute="leading" secondItem="eFc-el-5Ru" secondAttribute="leading" id="a2w-hD-IzV"/>
                         <constraint firstItem="adn-Go-ep8" firstAttribute="top" secondItem="tsY-i1-4ac" secondAttribute="bottom" constant="1" id="b2X-HA-BEa"/>
-                        <constraint firstAttribute="trailing" secondItem="DZU-dl-0CI" secondAttribute="trailing" id="fnf-Nu-gP6"/>
+                        <constraint firstItem="hnK-7q-jsg" firstAttribute="leading" secondItem="eFc-el-5Ru" secondAttribute="leading" id="cXh-Fa-ce6"/>
+                        <constraint firstItem="DZU-dl-0CI" firstAttribute="leading" secondItem="eFc-el-5Ru" secondAttribute="leading" id="emg-Hy-0QO"/>
                     </constraints>
                 </view>
             </subviews>
@@ -124,11 +180,12 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="eFc-el-5Ru" secondAttribute="bottom" id="qAJ-Jo-l2J"/>
                 <constraint firstItem="eFc-el-5Ru" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="zM5-4G-mgI"/>
             </constraints>
-            <point key="canvasLocation" x="-8" y="-11"/>
+            <point key="canvasLocation" x="-8.3969465648854964" y="-11.267605633802818"/>
         </view>
     </objects>
     <resources>
         <image name="icon-back-blue" width="8.6666669845581055" height="17.333333969116211"/>
+        <image name="icon-search-2" width="18" height="18"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
